<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PhoneCheck</string>
    <string name="im_ready">I\'m Ready</string>
    <string name="splash_text_1">Fast. Easy. Efficient</string>
    <string name="splash_text_2">Let\'s check your phone and see how much you can sell it for!</string>
    <string name="splash_text_3">You will need</string>
    <string name="wifi_connection">Wifi Connection</string>
    <string name="a_charger">A Charger</string>
    <string name="headphones">HeadPhones</string>
    <string name="reset">Reset</string>
    <string name="done_button">Done</string>
    <string name="auto_check">Auto Perform</string>
    <string name="home">Home</string>
    <string name="wifi_test_text">Please connect to a Wifi network.</string>
    <string name="device_results">device_results</string>
    <string name="device_filter">device_filter</string>
    <string name="empty_test_list">Test cannot be fetched from Test List file.\nProvided Test List is empty or corrupted.</string>
    <string name="showcase_pref">showcase_pref</string>
    <string name="settings_pref">settings_pref</string>
    <string name="audio_pref">audio_pref</string>
    <string name="spen_buttons_pref">spen_buttonsPref</string>
    <string name="mic_check">michcheck_pref</string>
    <string name="mic_es">mices_pref</string>
    <string name="mic_ls">micls_pref</string>
    <string name="mic_pb">micpb_pref</string>
    <string name="mic_pref">mic_pref</string>
    <string name="speech_pref">speech_pref</string>
    <string-array name="testStatusInfo">
        <item>Sub Test 1</item>
        <item>Sub Test 2</item>
        <item>Sub Test 2</item>
        <item>Sub Test 3</item>
    </string-array>
    <string name="title_activity_time_out">TimeOutActivity</string>
    <string name="camera_methods_message">Due to the complexity of camera hardware there are two types of test method and they are performed <b>differently</b>. If one doesn\'t work try second method.</string>
    <string name="eraser_phonecheck_start">eraser_phonecheck_start</string>
    <string name="eraser_phonecheck_calculate_memory">eraser_phonecheck_calculate_memory</string>
    <string name="device_admin_explanation">PhoneCheck</string>
    <string name="playback_auto_mode">Audio Playback (Auto Mode)</string>
    <string name="playback_manual_mode">Audio Playback (Manual Mode)</string>
    <string name="how_many_vibrate">How Many times did your device vibrate?</string>
    <string name="did_device_vibrate">Did your device vibrate?</string>
    <string name="glass_condition">Glass Condition</string>
    <string name="backlight_brightness">Backlight Brightness</string>
    <string name="brightness_increase">Did the display brightness gradually increased?</string>
    <string name="is_glass_cracked">is the Glass cracked?</string>
    <string name="test_incomplete">Test Incomplete</string>
    <string name="continue_test">Do you want to continue?</string>
    <string name="flash_test">Flash Test</string>
    <string name="did_flash_fire">Did the flash fire?</string>
    <string name="audio_test">Audio Test</string>
    <string name="did_hear_sound">Did You Hear sound?</string>
    <string name="did_hear_sound_speaker">Did speaker sound play loud and clear?</string>
    <string name="did_hear_sound_earspeaker">Did ear speaker sound play loud and clear?</string>
    <string name="test_version">You are using test version of Phonecheck</string>
    <string name="vibration">Vibration</string>
    <string name="phonecheck_accessibility_service">PhoneCheck Accessibility Service</string>
    <string name="sim_notfound">Sim not found</string>
    <string name="speaker_test_failed">Speaker test failed</string>
    <string name="say_hello_loud">Please say HELLO loud and clear.</string>
    <string name="enter_number">Enter Phone Number</string>
    <string name="earpiece_alerttext">Did you hear the beep from Earpiece</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (Î²)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="fingerprint_desc">Test the finger print of device.</string>
    <string name="back">Back</string>
    <string name="fail">Fail</string>
    <string name="pass">Pass</string>
    <string name="lcd_brightness">LCD Brightness</string>
    <string name="comments">Comments</string>
    <string name="skip">Skip</string>
    <string name="phoneCheckLink"><u>www.Phonecheck.com</u></string>
    <string name="fingerprint_descs">Put your finger on Finger Print Sensor</string>
    <string name="charge_fingerprint_text">Connect Device</string>
    <string name="get_started">Get Started</string>
    <string name="device_on_wireless_pad">1) Place Device on</string>
    <string name="device_on_wireless_pad_">Wireless Charging Pad.</string>
    <string name="tap_to_start">Tap To Start</string>
    <string name="wireless_text">Is Wireless Charging Detected ?</string>
    <string name="disconnect_device">2) If Wireless Charging is not Detected,</string>
    <string name="power_cable">Please </string>
    <string name="power_cable_2">Disconnect Device From Power Cable.</string>
    <string name="charge_fingerprint_text1">To PhoneCheck To Complete Test</string>
</resources>