<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SaveComments"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.upgenicsint.phonecheck.views.TypeFacedButton
            android:id="@+id/backButton"
            style="@style/MainHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start|center_vertical"
            android:layout_gravity="left"
            android:text="@string/back" />

        <com.upgenicsint.phonecheck.views.TypeFacedTextView
            android:id="@+id/homeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:text="@string/comments"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/header_nav_text_size"/>

        <com.upgenicsint.phonecheck.views.TypeFacedButton
            android:id="@+id/skipButton"
            style="@style/MainHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:gravity="right|center_vertical"
            android:layout_gravity="right"
            android:text="@string/skip"/>
    </LinearLayout>

    <EditText
        android:id="@+id/enter_comments"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="Enter additional comments here"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="start"
        android:background="@drawable/shape_background"/>

    <Button
        android:id="@+id/save_comments"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/button_selector"
        android:text="Save Comments"
        android:background="@drawable/btn_shape_background"
        android:textSize="20sp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="8dp"/>
</LinearLayout>