<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginBottom="8dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_version"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoPerformButton"
        app:layout_constraintBottom_toTopOf="@+id/headerCurrentTestTextView"/>

    <TextView
        android:id="@+id/buildTextView"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/build_version"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.upgenicsint.phonecheck.views.TypeFacedButton
        android:id="@+id/resetButton"
        style="@style/MainHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:onClick="resetClick"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.upgenicsint.phonecheck.views.TypeFacedTextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/home"
        android:textColor="@color/main_header_text_color"
        android:textSize="@dimen/header_nav_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.upgenicsint.phonecheck.views.TypeFacedButton
        android:id="@+id/cc"
        style="@style/MainHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:onClick="doneClick"
        android:text="@string/done_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildTextView" />

    <com.upgenicsint.phonecheck.views.StartButton
        android:id="@+id/autoPerformButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/homeTextView"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:onClick="autoPerformClick"
        android:scaleType="centerInside"
        android:src="@drawable/start"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <com.upgenicsint.phonecheck.views.TypeFacedTextView
        android:id="@+id/headerCurrentTestTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoPerformButton"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/main_header_current_task_text_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/phonecheckLink"
        app:layout_constraintTop_toBottomOf="@+id/autoPerformButton" />

    <Button
        android:id="@+id/debugButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:onClick="debugBtnClick"
        android:text="Test(Dev)"
        android:visibility="@integer/debug_button"
        app:layout_constraintBottom_toBottomOf="@+id/autoPerformButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/autoPerformButton" />

    <TextView
        android:id="@+id/phonecheckLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/button_selector"
        android:text="@string/phoneCheckLink"
        android:onClick="routePhoneCheck"
        app:layout_constraintTop_toBottomOf="@+id/headerCurrentTestTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>